<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Applause</string>
    <string name="clap">The Celebrate Language Audio Project</string>
    <string name="clap2">CLAP</string>
    <string name="website">www.celebrate-language.com</string>
    <string name="btnFindByCountry">By Country</string>
    <string name="btnFindByLocation">By Location</string>
    <string name="btnSearch">Search</string>
    <string name="btnFindLanguages">Find Languages</string>
    <string name="btnMyLessons">My Lessons</string>
    <string name="btnHelp">Help</string>
    <string name="btnAbout">About</string>
    <string name="ok">OK</string>
    <string name="splash_img_desc">Africa Image</string>
    <string name="pc_logo">Peace Corps Logo</string>
    <string name="btnPlayLesson">Play</string>
    <string name="btnStudyPhrases">Study</string>
    <string name="btnMemorize">Memorize</string>
    <string name="btnQuit">Return to Menu</string>
    <string name="btnPrevious">Previous</string>
    <string name="btnNext">Next</string>
   	<string name="btnBack">Back</string>
   	<string name="btnPlay">Play</string>
   	<string name="btnYes">Yes</string>
   	<string name="btnNo">No</string>
    <string name="about_full">Developed by Peace Corps Ghana in collaboration with Coders4Africa and Mobile Web Ghana</string>
    <string name="play">Play</string>
    <string name="close">Close</string>
    <string name="help">Help Is On The Way</string>
    <string name="about_name">Applause\nApplication for Language Audio Users</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_clear_data">Clear Data</string>
    <string name="menu_export_phrases">Export Phrases</string>
    <string name="menu_add_to_my_lessons">Add To My Lessons</string>
    <string name="menu_remove_from_my_lessons">Remove From My Lessons</string>
    <string name="dialog_clear">Clear</string>
    <string name="dialog_export">Export</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="pref_data_usage">Data Usage</string>
    <string name="pref_text_size">Text Size</string>
    <string name="pref_text_size_default">medium</string>
    <string name="pref_location">Use Location</string>
    <string name="pref_location_enabled">Applause Will Use Your Location</string>
    <string name="pref_location_disabled">Applause Will Not Use Your Location</string>
    <string name="pref_data_usage_default">any</string>
    <string name="press_back_again">Please press BACK again to exit</string>
    <string name="english">English</string>
    
    
    
    
    
</resources>