<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DefaultLinearLayoutStyle"
    android:configChanges="orientation|keyboardHidden"
    android:gravity="center|center_horizontal|center_vertical"
    android:orientation="vertical"
    android:screenOrientation="portrait" >

    <TextView
        style="@style/DefaultTextViewStyle"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="@string/about_name"
        android:textAlignment="center"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/main_icon"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:contentDescription="@string/splash_img_desc"
        android:layout_marginBottom="35dp"
        android:src="@drawable/africa" />

    <TextView
        style="@style/DefaultTextViewStyle"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="@string/about_full"
        android:textAlignment="center"
        android:textSize="15sp" />

     <ImageView
         android:id="@+id/pc_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="25dp"
         android:contentDescription="@string/pc_logo"
         android:src="@drawable/pc_logo" />

    <TextView
        style="@style/DefaultTextViewStyle"
        android:gravity="center_horizontal"
        android:text="@string/clap"
        android:textSize="12sp" />

    <TextView
        style="@style/DefaultTextViewStyle"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="@string/website"
        android:textSize="12sp" />

</LinearLayout>