<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DefaultLinearLayoutStyle"
    android:screenOrientation="portrait"
    android:configChanges="orientation|keyboardHidden"
    tools:context=".SplashActivity" >

    <TextView
        style="@style/DefaultTextViewStyle"
        android:gravity="center"
        android:text="@string/clap2"
        android:layout_marginBottom="20dp"
        android:textSize="50sp" />

    <ImageView
        android:id="@+id/main_icon"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:contentDescription="@string/splash_img_desc"
        android:layout_marginBottom="35dp"
        android:src="@drawable/africa" />

    <TextView
        style="@style/DefaultTextViewStyle"
        android:gravity="center"
        android:text="@string/clap"
        android:layout_marginBottom="10dp"
        android:textSize="15sp" />
    
     <TextView
        style="@style/DefaultTextViewStyle"
        android:gravity="center"
        android:text="@string/website"
        android:layout_marginBottom="30dp"
        android:textSize="12sp" />

     <ImageView
         android:id="@+id/pc_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="25dp"
         android:contentDescription="@string/pc_logo"
         android:src="@drawable/pc_logo" />

</LinearLayout>