<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

   <PreferenceCategory
       android:title="General"
       android:key="general_category" >
       
       <ListPreference
           android:key="pref_text_size"
           android:title="@string/pref_text_size"
           android:dialogTitle="@string/pref_text_size"
           android:entries="@array/pref_text_size_entries"
           android:entryValues="@array/pref_text_size_entries"
           android:defaultValue="Medium" />
           
       <ListPreference
           android:key="pref_data_usage"
           android:title="@string/pref_data_usage"
           android:dialogTitle="@string/pref_data_usage"
           android:entries="@array/pref_data_usage_entries"
           android:entryValues="@array/pref_data_usage_entries"
           android:defaultValue="Any Connection" />
       
       <CheckBoxPreference 
           android:key="pref_location"
           android:title="@string/pref_location"
           android:defaultValue="true" />

   </PreferenceCategory> 

</PreferenceScreen>
