<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" 
    android:background="#000000">

    <TextView
        android:id="@+id/lesson_title"
        android:layout_width="175dp"
        android:layout_height="75dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textIsSelectable="false"
        android:textColor="#ffffff"
        android:textAppearance="?android:attr/textAppearanceLarge" />
  
    <Button
        android:id="@+id/button1"
        android:layout_width="175dp"
        android:textColor="#ffffff"
        android:background="#005AA3"
        android:layout_height="35dp"
        android:text="@string/btnPlayLesson" />
    
    <Button 
        android:id="@+id/button2" 
        android:textColor="#ffffff"
        android:background="#005AA3"
        android:text="@string/btnStudyPhrases"
        android:layout_width="175dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dip"/>
    
    <Button 
        android:id="@+id/button3" 
        android:textColor="#ffffff"
        android:background="#005AA3"
        android:layout_marginTop="20dip"   
        android:text="@string/btnQuit"
        android:layout_width="175dp"
        android:layout_height="35dp"/>
    
</LinearLayout>
